added basename to browser router

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://SlimGabsi.github.io/reactnd-project-myreads",
+  "homepage": "https://SlimGabsi.github.io/reactnd-project-myreads",
   "name": "myreads-app",
   "version": "0.1.0",
   "private": true,
